site/MVC/Assets/styles/default.css
#body {
	margin-top: 75px;
}

a.navbar-brand {
	height: 100%;
	padding-left: 0;
}

	a.navbar-brand img {
		height: 1.5em;
		margin: -0.7em 0.3em -0.5em 0;
		display: inline;
	}

.logo {
	font-size: 36px;
	height: 71px;
	padding: 13px 0 17px 0;
	margin: 15px 0 0 5px;
	text-shadow: none;
	line-height: inherit;
}

	.logo img {
		height: 2em;
		margin: -1em 0.2em -0.5em 0;
	}

.move-down {
	margin-top: 25px;
}

footer {
	margin-top: 30px;
	margin-bottom: 30px;
}

.validation-summary-errors ul {
	margin: 0;
	padding: 0;
}

	.validation-summary-errors ul li {
		list-style: none;
	}

.field-validation-error {
	display: block;
}

.glyphicon-plus {
	margin-left: 1px;
	margin-right: -1px;
}

.side-vertical-button {
	margin-top: 10px;
}

.btn-clear {
	background: transparent;
	padding: 0;
	margin: 0;
	border: none;
}

input[type="date"] {
	line-height: 1.25 !important;
}

.modal-backdrop {
	opacity: 0.75;
}

.header {
	margin: 0.5em 0.5em 0.3em 0.2em;
}

	.header em {
		float: right;
		margin-right: 10px;
		font-size: 75%;
	}

#search-modal .modal-body {
	margin-bottom: 40px;
}

	#search-modal .modal-body button {
		float: right;
	}

.top-right-highlight {
	position: absolute;
	right: 0;
	margin: 5px;
}

	.top-right-highlight:empty {
		display: none;
	}

.clock a {
	font-size: 70%;
	text-align: center;
	line-height: 1em !important;
	cursor: default;
}

dt {
	margin-top: 1.5em;
}

dd {
	font-style: italic;
}

.panel-heading h1 {
	font-size: 1.5em;
}

.modal-body h2, .panel-body h2 {
	font-size: 1.3em;
}

.money {
	font-weight: bold;
}

.navbar a:focus,
.navbar a:hover,
.navbar a:focus span,
.navbar a:hover span {
	text-shadow:
		 2px  0   var(--primary-1),
		 0    2px var(--primary-1),
		 0   -2px var(--primary-1),
		-2px  0   var(--primary-1);
}

.alert a {
	color: var(--neutral-0);
	text-decoration: underline;
}

.navbar .flag svg {
	height: 18px;
	width: auto;
}

.pt-br .green {
	fill: var(--neutral-2);
}
	.pt-br:focus .green,
	.pt-br:hover .green,
	#language-modal .pt-br .green {
		fill: #009b3a;
	}

.pt-br .yellow {
	fill: var(--primary-0);
}
	.pt-br:focus .yellow,
	.pt-br:hover .yellow,
	#language-modal .pt-br .yellow {
		fill: #fedf00;
	}

.pt-br .blue {
	fill: var(--neutral-2);
}
	.pt-br:focus .blue,
	.pt-br:hover .blue,
	#language-modal .pt-br .blue {
		fill: #002776;
	}

.pt-br .white {
	fill: var(--primary-0);
}
	.pt-br:focus .white,
	.pt-br:hover .white,
	#language-modal .pt-br .white {
		fill: #ffffff;
	}

.en-us .blue {
	fill: var(--neutral-2);
}
	.en-us:focus .blue,
	.en-us:hover .blue,
	#language-modal .en-us .blue {
		fill: #012169;
	}

.en-us .red {
	stroke: var(--neutral-2);
}
	.en-us:focus .red,
	.en-us:hover .red,
	#language-modal .en-us .red {
		stroke: #C8102E;
	}

.en-us .white {
	stroke: var(--primary-0);
}
	.en-us:focus .white,
	.en-us:hover .white,
	#language-modal .en-us .white {
		stroke: #ffffff;
	}

.clock > a:hover, .clock > a:focus {
	text-shadow: none;
}

:focus {
	outline: none;
}

.result-page .alert {
	padding: 30px;
	margin: 70px 0;
}
	.result-page h1 {
		font-size: 1.5em;
		margin-top: 0;
		margin-bottom: 16px;
	}

.credits {
	font-size: 75%;
	text-align: right;
	margin: 1em 0;
}

#github {
	fill: var(--highlight-0);
}

tr.sum-factor {
	cursor: pointer;
}

.btn-float {
	position: fixed;
	bottom: 2em;
	right: 2em;
}

.dropdown-menu {
	margin-top: -10px !important;
	background: var(--primary-0);
}

.dropdown-menu a {
	color: var(--neutral-2);
}

.activate-warning {
	position: fixed;
	border: 0;
	border-radius: 0;
}

	.activate-warning.activate-warning-low {
		background: var(--primary-0);
	}

	.activate-warning.activate-warning-high {
		background: var(--highlight-0);
	}

	.activate-warning.activate-warning-top {
		top: 60px;
	}

	.activate-warning.activate-warning-bottom {
		bottom: 0;
	}

	.activate-warning.activate-warning-left {
		left: 0;
	}

	.activate-warning.activate-warning-right {
		right: 0;
	}

		.activate-warning.activate-warning-top.activate-warning-left {
			border-bottom-right-radius: 30px;
		}

		.activate-warning.activate-warning-top.activate-warning-right {
			border-bottom-left-radius: 30px;
		}

		.activate-warning.activate-warning-bottom.activate-warning-left {
			border-top-right-radius: 30px;
		}

		.activate-warning.activate-warning-bottom.activate-warning-right {
			border-top-left-radius: 30px;
		}

			.activate-warning.activate-warning-top::after {
				margin-top: -6px;
				margin-bottom: -3px;
			}

			.activate-warning.activate-warning-bottom::after {
				margin-top: -3px;
				margin-bottom: -6px;
			}

			.activate-warning.activate-warning-left::after {
				margin-left: -5px;
				margin-right: 0;
			}

			.activate-warning.activate-warning-right::after {
				margin-left: 0;
				margin-right: -5px;
			}

	.activate-warning-low:hover,
	.activate-warning-low:active,
	.activate-warning-low:active:focus,
	.activate-warning-low:focus {
		background: var(--primary-1);
	}

	.activate-warning-high:hover,
	.activate-warning-high:active,
	.activate-warning-high:active:focus,
	.activate-warning-high:focus {
		background: var(--highlight-1);
	}

